Fix bug when long word overflowed <p> borders

--- a/app/assets/stylesheets/bootstrap-custom.scss
+++ b/app/assets/stylesheets/bootstrap-custom.scss
@@ -31,6 +31,10 @@ html, body {
   }
 }
 
+p {
+  word-wrap: break-word;
+}
+
 h5 {
   color: $black;
 }
